# rust-backend-template

./: .env  Cargo.toml  logfile  readme.md  shell.nix
.tmp/mydb/: postgresql.conf  postmaster.opts  postmaster.pid
.tmp/mydb/base/1/: 13564  2619
.tmp/mydb/base/13709/: pg_internal.init
.tmp/mydb/base/16384/: 1247  1249  1249_fsm  1255  1259  1259_vm  16385  16389  16393  16395  16402  16403  2224  2579  2604  2606  2606_vm  2608  2608_vm  2610  2610_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2703  2704  3455  (+2 more)
.tmp/mydb/base/24576/: 1247  1247_vm  1249  1249_vm  1255  1255_vm  1259  1259_vm  24577  24581  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2703  2704  3455  pg_internal.init
.tmp/mydb/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
.tmp/mydb/pg_stat_tmp/: db_0.stat  db_13709.stat  db_16384.stat  db_24576.stat  global.stat
src/: actors.rs  main.rs  models.rs  response.rs
