[package]
name = "graphql-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-codec = "0.4"
actix-web = "3.3.2"
actix-web-actors = "3"
actix-files = "0.5"
awc = "2"
env_logger = "0.9"
futures = "0.3.1"
bytes = "1.1.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = {version = "1.4.8", features = ["uuidv07", "r2d2", "postgres", "chrono"]}
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
chrono = {version = "0.4.19", features=["serde"]}


[dev-dependencies]
actix-rt = "1"